# FastAPI-SQL-Architecture

./: .gitignore  README.md  pyproject.toml
api/: main.py
api/crud/: __init__.py  user_auth_data_crud.py  user_crud.py
api/models/: __init__.py  base.py  item.py  user.py  user_auth_data.py
api/routers/: users.py  users_router.py
api/schemas/: __init__.py  auth_schemas.py  user_auth_data_schema.py  user_schemas.py
api/services/: __init__.py  user_services.py
api/utils/: __init__.py  security.py
core/: exception.py  settings.py
core/exeptions/: exception.py
db/: sessions.py
db/migrations/: env.py
db/migrations/versions/: 12c000840544_user_user_auth_data_table.py  f35f92800e55_user_userauth_item_tables.py
