[tool.poetry]
name = "fastapi-sql-architecture"
version = "0.1.0"
description = ""
authors = ["Thierry Masumbuko"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
pydantic = "^2.9.2"
alembic = "^1.13.3"
SQLAlchemy = "^2.0.35"
pydantic-settings = "^2.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
